force-app/main/default/objects/npsp__DataImport__c/fields/npsp__Recurring_Donation_Day_of_Month__c.field-meta.xml
<CustomField>
    <fullName>npsp__Recurring_Donation_Day_of_Month__c</fullName>
    <description>Sets the specific day of the month for future installment Opportunities when the Installment Period is Monthly. If you select 29 or 30, the installment date will be the last day of the month for months that don&apos;t have that many days.</description>
    <inlineHelpText>Establece el día específico del mes para Oportunidades de cuota futuras cuando el Período de cuota es Mensualmente. Si selecciona 29 o 30, la fecha de la cuota será el último día del mes para los meses que no tengan ese número de días.</inlineHelpText>
    <label>Recurring Donation Day of Month</label>
    <length>10</length>
    <type>Text</type>
</CustomField>