force-app/main/default/objects/npsp__DataImport__c/fields/npsp__Recurring_Donation_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>npsp__Recurring_Donation_Effective_Date__c</fullName>
    <description>The date that new or updated schedule information (Amount, Day of Month, etc.) for this Recurring Donation takes effect. The default is the current date.</description>
    <inlineHelpText>La fecha en la que entra en vigor esa información de programación nueva o actualizada (Importe, Día del mes, etc.) para esta Donación recurrente. El valor predeterminado es la fecha actual.</inlineHelpText>
    <label>Recurring Donation Effective Date</label>
    <type>Date</type>
</CustomField>