force-app/main/default/objects/npsp__DataImport__c/fields/npsp__Recurring_Donation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>npsp__Recurring_Donation_End_Date__c</fullName>
    <description>The date on which this Recurring Donation was closed.</description>
    <inlineHelpText>Después de esta fecha, NPSP deja de crear cuotas para esta Donación recurrente y actualiza Estado a Cerrado.</inlineHelpText>
    <label>Recurring Donation End Date</label>
    <type>Date</type>
</CustomField>