force-app/main/default/objects/npsp__DataImport__c/fields/npsp__Recurring_Donation_Installment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>npsp__Recurring_Donation_Installment_Frequency__c</fullName>
    <description>The Installment Frequency along with Installment Period defines the installment schedule of this Recurring Donation. For example, if Installment Period is Monthly and Installment Frequency is 3, the schedule is defined as &quot;every 3 months&quot;.</description>
    <inlineHelpText>Frecuencia de cuota junto con Período de cuota definen la programación de cuotas para esta Donación recurrente. Por ejemplo, si Período de cuota es Mensualmente y Frecuencia de cuota es 3, la programación se define como &quot;cada 3 meses&quot;.</inlineHelpText>
    <label>Recurring Donation Installment Frequency</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>