force-app/main/default/objects/npsp__DataImport__c/fields/npsp__Recurring_Donation_Installment_Period__c.field-meta.xml
<CustomField>
    <fullName>npsp__Recurring_Donation_Installment_Period__c</fullName>
    <description>The Installment Period along with Installment Frequency defines the installment schedule of this Recurring Donation. For example, if Installment Period is Monthly and Installment Frequency is 3, the schedule is defined as &quot;every 3 months&quot;.</description>
    <inlineHelpText>Período de cuota junto con Frecuencia de cuota definen la programación de cuotas para esta Donación recurrente. Por ejemplo, si Período de cuota es Mensualmente y Frecuencia de cuota es 3, la programación se define como &quot;cada 3 meses&quot;.</inlineHelpText>
    <label>Recurring Donation Installment Period</label>
    <length>20</length>
    <type>Text</type>
</CustomField>