force-app/main/default/objects/npsp__DataImport__c/fields/npsp__Recurring_Donation_Recurring_Type__c.field-meta.xml
<CustomField>
    <fullName>npsp__Recurring_Donation_Recurring_Type__c</fullName>
    <description>Open indicates an ongoing Recurring Donation. Fixed indicates a Recurring Donation that has a specific number of installments. For Fixed, you must also populate the Number of Planned Installments field.</description>
    <inlineHelpText>Abierto indica una donación recurrente continuada. Fijo indica una donación recurrente que tiene un número específico de cuotas. Para Fijo, también debe rellenar el campo Cantidad de cuotas planificadas.</inlineHelpText>
    <label>Recurring Donation Recurring Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>