force-app/main/default/objects/npsp__DataImport__c/fields/npsp__Recurring_Donation_Status__c.field-meta.xml
<CustomField>
    <fullName>npsp__Recurring_Donation_Status__c</fullName>
    <description>Indicates if this Recurring Donation is actively in use, temporarily suspended, or closed.</description>
    <inlineHelpText>Indica si esta Donación recurrente está en uso activamente, suspendida temporalmente o cerrada.</inlineHelpText>
    <label>Recurring Donation Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>