force-app/main/default/objects/npsp__DataImport__c/fields/npsp__Status__c.field-meta.xml
<CustomField>
    <fullName>npsp__Status__c</fullName>
    <description>The status of the import for this record, for example, Imported or Failed.</description>
    <inlineHelpText>Estado de importación del registro de Data Import</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Imported</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>