force-app/main/default/objects/npsp__DataImport__c/fields/npsp__UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>npsp__UTM_Medium__c</fullName>
    <description>Google Analytics parameter for tracking how the URL was shared. For example, email or banner_ad.</description>
    <inlineHelpText>Parámetro de Google Analytics para seguir cómo se compartió la URL. Por ejemplo, email o banner_ad.</inlineHelpText>
    <label>UTM Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>