force-app/main/default/objects/npsp__DataImport__c/fields/npsp__UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>npsp__UTM_Source__c</fullName>
    <description>Google Analytics parameter for tracking the referring source. For example, website or newsletter.</description>
    <inlineHelpText>Parámetro de Google Analytics para seguir el origen referente. Por ejemplo, website o newsletter.</inlineHelpText>
    <label>UTM Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>